# dio-api-crossfit

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6934285e030a_.py
dio_fastapi_crossfit/: __init__.py  main.py  routers.py
dio_fastapi_crossfit/atleta/: controller.py  models.py  schemas.py
dio_fastapi_crossfit/categorias/: controller.py  models.py  schemas.py
dio_fastapi_crossfit/centro_treinamento/: controller.py  models.py  schemas.py
dio_fastapi_crossfit/configs/: database.py
dio_fastapi_crossfit/contrib/: dependecies.py
dio_fastapi_crossfit/contrib/repository/: models.py
workout_api/atleta/: controller.py
